# rs-eth-db

./: .env.test  Cargo.toml  docker-compose.yaml  docker-startup  readme.md
migrations/2023-01-02-204857_create_cars/: down.sql  up.sql
migrations/2023-01-04-222150_create_blocks/: down.sql  up.sql
migrations/2023-01-05-122527_create_txs/: down.sql  up.sql
migrations/2023-01-05-164139_create_txs/: down.sql  up.sql
migrations/2023-01-05-164159_create_blocks/: up.sql
migrations/2023-01-06-201203_create_indexes/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs
