[package]
name = "rs-eth-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
dotenv = "0.15.0"
serde_json = "1.0"
serde = { version = "1.0.140", features = ["derive"] }
env_logger = "0.10.0"
diesel = { version = "2.0.2", features = ["postgres"] }
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["full"] }
ethers = { version = "1.0.2", features = ["ws", "rustls"] }